--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,12 @@
 root = true
 
-[Makefile]
-indent_style = tab
-
 [*.go]
 indent_style = tab
 indent_size = 4
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[Makefile]
+indent_style = tab
